name:           process-vm
version:        0.1
synopsis:       Linux' process_vm_readv and process_vm_writev
category:       System
license:        LGPL
maintainer:     Alejandro Castello <a.castello.pas@gmail.com>
author:         Alejandro Castello <a.castello.pas@gmail.com>
homepage:       https://github.com/acastello/process-vm
description:    Bindings to linux' only process_vm_readv and 
    process_vm_writev, as well as functions to work with Storable datatypes.    
Cabal-Version: >= 1.2
build-type:     Simple

library
    hs-source-dirs:     src
    exposed-modules:    System.Process.VM 
    c-sources:          src/memops.c
    extensions:         ForeignFunctionInterface
    build-depends:      unix, 
                        base >= 3 && < 5, 
                        mtl,
                        data-default,
                        cereal,
                        bytestring
