name:           process-vm
version:        0.2
synopsis:       Linux' process_vm_readv and process_vm_writev
category:       System
license:        LGPL
maintainer:     Alejandro Castello <a.castello.pas@gmail.com>
author:         Alejandro Castello <a.castello.pas@gmail.com>
homepage:       https://github.com/acastello/process-vm
description:    Bindings to linux' only process_vm_readv and 
    process_vm_writev, as well as functions to work with Storable datatypes.    
Cabal-Version: >= 1.2
build-type:     Simple

Flag Debug
    Description:        Trace ocurrence of generic 'read_' and 'write_' operations, as
                        opposed to rules-sustituted ones
    Default:            False
library
    hs-source-dirs:     src
    exposed-modules:    System.Process.VM,
                        System.Process.VM.Common,
                        System.Process.VM.SafeCall,
                        System.Process.VM.UnsafeCall,
                        System.Process.VM.PrimCall
    c-sources:          cbits/memops.c,
                        cbits/primops.cmm
    extensions:         ForeignFunctionInterface,
                        CApiFFI,
                        DoAndIfThenElse,
                        OverloadedStrings,
                        CPP,
                        FlexibleInstances,
                        UndecidableInstances
    build-depends:      unix, 
                        base >= 3 && < 5, 
                        data-default,
                        parsec >= 3,
                        cereal,
                        bytestring

    if flag(debug)
        GHC-Options:    -DDEBUG
